@@ -51,14 +51,8 @@ from pprint import pformat
 
 testroot = os.path.abspath(os.path.dirname(__file__) or os.curdir)
 os.chdir(testroot)
-if sys.version_info >= (3, 0):
-    sys.path.insert(0, os.path.normpath(os.path.join(testroot,
-                                                     '..', 'build', 'lib')))
-    sys.path.append(os.path.normpath(os.path.join(testroot, '..',
-                                                  'build', 'lib', 'extras')))
-else:
-    sys.path.insert(0, os.path.normpath(os.path.join(testroot, '..')))
-    sys.path.append(os.path.normpath(os.path.join(testroot, '..', 'extras')))
+sys.path.insert(0, os.path.normpath(os.path.join(testroot, '..')))
+sys.path.append(os.path.normpath(os.path.join(testroot, '..', 'extras')))
 sys.path.insert(0, testroot)
 
 try:
